# nerc-keylogger

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
keylog/src/: main.rs
keylogger/: Cargo.toml
keylogger-server/: .gitignore  Cargo.toml  config.toml
keylogger-server/public/: index.html
keylogger-server/src/: main.rs
keylogger/src/: keylog.rs  main.rs
src/: main.rs
